notificaiton => bomb
